update java.cmd